# COMP64803-Responsible-Reproducible-AI

./: .gitignore  EDA.ipynb  README.md  app.py  example.ics  get_pandas.py  ics_utils.py  sebastienandresloan.md  vis.py
.devcontainer/: devcontainer.json  dockerfile  requirements.txt
cohort-2024/: Michael  alexhigginbottom.md  fanyiwu.md  joanfont-quer.md  kmadgwick.md  michaeldodds.md  mingfeisun.md  mingxinshen.md  mohammed.md  oscarhill.md
cohort-2024/Fanyi_Wu/: .gitignore  Dockerfile  Good_practice.pptx  Instructions.md  LICENSE  environment.yml  readme.md
cohort-2024/HanlinXiao/: Effective Python coding examples.pptx  ExampleCode.ipynb
cohort-2024/Mingxin_Shen/: Dockerfile  README.md  item19.py  item25.py  item40.py  item42.py  item75.py  item7680.py  requirements.txt  sample_data.csv  test_item7680.py
cohort-2025/: README.md  abhishekdas.md  charliedrury.md  chirptymchyshyn.md  gabrielcolenso.md  rachelgaffney.md  rubenmorenoguado.md  tzulianghsu.md
hackathon/energy-optimisation/: .gitignore  README.md  pyproject.toml
hackathon/energy-optimisation/docs/: construct.sh
hackathon/energy-optimisation/docs/source/_autosummary/: graph_elements.connections.rst  graph_elements.nodes.SinkNode.rst  graph_solver.graph_solver.GraphSolver.rst  simulations.rst
hackathon/energy-optimisation/main/graph_elements/: connections.py  graph.py  nodes.py
hackathon/energy-optimisation/main/simulations/: simulator_base.py  sink_simulators.py  source_simulators.py
michael_dodds/: dockerfile  effective_python.pptx
templates/: index.html  results.html
(+387 files in other folders)
