[project]
name = "energy"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.1.0",
    "numpy>=2.2.2",
    "torch>=2.6.0",
    "matplotlib>=3.10.0",
    "scipy>=1.15.1",
    "sphinx>=7.3.7",
    "myst-parser>=4.0.0"
]

[tool.setuptools]
package-dir = {"" = "./main"}
packages = ["graph_elements", "simulations", "graph_solver"]